# clear-rows

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: PUBLIC_SAFETY.md
samples/: small.csv
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/csv/: delimiter.rs  document.rs  mod.rs  parser.rs  profile.rs  search.rs  sort.rs
src-tauri/src/csv/export/: mod.rs
src-tauri/src/csv/filter/: mod.rs  scan.rs
src-tauri/src/csv/sort/: key.rs  mod.rs  mode.rs  spill.rs
src/app/: constants.ts  mount-application.ts  preferences.ts  theme.ts
src/components/: app-footer.ts  app-header.ts  app-shell.ts  column-visibility-control.ts  csv-empty-state.ts  csv-filter-bar.ts  csv-preview-grid.ts  csv-search-panel.ts  export-button.ts  grid-row.ts  jump-to-row.ts  primary-button.ts  progress-strip.ts  reopen-as-control.ts  search-results-table.ts  status-banner.ts  theme-toggle.ts
src/csv/: column-window.ts  csv-api.ts  csv-session.ts  grid-virtualizer.ts  open-csv-flow.ts  row-window-store.ts  search-csv-flow.ts
src/styles/: main.css
src/tauri/: runtime.ts
src/types/: csv.ts
