[package]
name = "clear-rows"
version = "0.1.0"
description = "Performance-first delimited file explorer"
edition = "2021"
rust-version = "1.78"

[lib]
name = "clear_rows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
